Change sidecar registry to internal dockerhub
Signed-off-by: ssh24 <sshasan10@hotmail.com>

--- a/plugins/codewind/codewind-plugin/0.0.1/meta.yaml
+++ b/plugins/codewind/codewind-plugin/0.0.1/meta.yaml
@@ -13,7 +13,7 @@ firstPublicationDate: "2019-02-20"
 spec:
   containers:
   - name: codewind-che-sidecar
-    image: sys-mcs-docker-local.artifactory.swg-devops.com/sakib/codewind-che-sidecar:sakib
+    image: sakibh/codewind-che-sidecar:sakib
     volumes:
       - mountPath: "/projects"
         name: projects
