--- a/devfiles/codewind/devfile.yaml
+++ b/devfiles/codewind/devfile.yaml
@@ -31,14 +31,6 @@ projects:
     source:
       type: git
       location: 'https://github.com/microclimate-dev2ops/microclimateNodeTemplate'
-  - name: microproj
-    source:
-      type: git
-      location: 'https://github.com/maysunfaisal/hellomicro.git'
-  - name: springproj
-    source:
-      type: git
-      location: 'https://github.com/maysunfaisal/maysunspring1.git'
 components:
   - alias: theia-ide
     type: cheEditor
@@ -51,4 +43,4 @@ components:
     reference: https://raw.githubusercontent.com/ssh24/che-configs/master/plugins/codewind/codewind-plugin/0.0.1/meta.yaml
   - alias: codewind-theia
     type: chePlugin
-    reference: https://raw.githubusercontent.com/ssh24/che-configs/master/plugins/codewind/codewind-theia/0.2.0/meta.yaml
+    reference: https://raw.githubusercontent.com/ssh24/che-configs/master/plugins/codewind/codewind-theia/latest/meta.yaml
